--- a/polls/templates/index.html
+++ b/polls/templates/index.html
@@ -8,16 +8,16 @@
 {#    <link rel="stylesheet" href="{% static "" %}">#}
 </head>
 <body>
-    <h1>this's {{j}}'s index</h1>
-    {% if latest_question_list %}
+    <h1>this's {{var_article.title}}'s index</h1>
+    {% if content %}
     <ul>
      {% comment%}
     在polls.urls模块的url()函数中定义了name 参数，你可以通过
     使用{% url %}模板标签来移除对你的URL配置中定义的特定的URL的依赖
      工作原理是在polls.url模块里查找指定的URL的定义
      {% endcomment%}
-    {% for question in latest_question_list %}
-        <li><a href="{% url 'ns_polls:detail' question.id %}">{{ question.question_text }}</a></li>
+    {% for item in content %}
+        <li>{{ item.title }}</li>
     {% endfor %}
     </ul>
     {% else %}
